parser and icg/bin/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WS
    BACKQUOTE
    WITH
    EXCEPT
    PERCENTEQUAL
    IMPORT
    SLASHSLASH
    RBRACE
    EXEC
    PASS
    STARSTAREQUAL
    DEL
    MINEQUAL
    BINARYNUMBER
    TRY
    RAWSTRING
    LBRACE
    INUMBER
    AS
    LAMBDA
    RAISE
    GLOBAL
    DOT
    TILDE
    PLUSEQUAL
    HEXADECIMALNUMBER
    OCTALNUMBER
    STAREQUAL
    ELIF
    STARSTAR
    SLASHEQUAL
    ASSERT
    SEMI
    CLASS
    IS
    YIELD
    FINALLY
    AT
    UNICODESTRING
    FROM
    SLASHSLASHEQUAL

Grammar

Rule 0     S' -> file_input
Rule 1     file_input -> single_stmt ENDMARKER
Rule 2     single_stmt -> single_stmt NEWLINE
Rule 3     single_stmt -> <empty>
Rule 4     single_stmt -> single_stmt stmt
Rule 5     funcdef -> DEF NAME MarkerScope parameters MarkerArg COLON suite
Rule 6     MarkerScope -> <empty>
Rule 7     MarkerArg -> <empty>
Rule 8     parameters -> LPAREN RPAREN
Rule 9     parameters -> LPAREN varargslist RPAREN
Rule 10    function_call -> NAME LPAREN RPAREN
Rule 11    function_call -> NAME LPAREN testlist RPAREN
Rule 12    varargslist -> fpdef
Rule 13    varargslist -> fpdef EQUAL test
Rule 14    varargslist -> fpdef COMMA varargslist
Rule 15    varargslist -> fpdef EQUAL test COMMA varargslist
Rule 16    fpdef -> NAME
Rule 17    fpdef -> LPAREN fplist RPAREN
Rule 18    fplist -> fpdef
Rule 19    fplist -> fpdef COMMA fplist
Rule 20    stmt -> simple_stmt
Rule 21    stmt -> compound_stmt
Rule 22    simple_stmt -> small_stmts NEWLINE
Rule 23    small_stmts -> small_stmt
Rule 24    small_stmt -> flow_stmt Marker
Rule 25    small_stmt -> expr_stmt Marker
Rule 26    small_stmt -> print_stmt Marker
Rule 27    expr_stmt -> test EQUAL test
Rule 28    expr_stmt -> test EQUAL function_call
Rule 29    print_stmt -> PRINT
Rule 30    print_stmt -> PRINT testlist
Rule 31    flow_stmt -> break_stmt Marker
Rule 32    flow_stmt -> return_stmt Marker
Rule 33    flow_stmt -> continue_stmt Marker
Rule 34    break_stmt -> BREAK
Rule 35    continue_stmt -> CONTINUE
Rule 36    return_stmt -> RETURN
Rule 37    return_stmt -> RETURN test
Rule 38    compound_stmt -> if_stmt Marker
Rule 39    compound_stmt -> for_stmt Marker
Rule 40    compound_stmt -> while_stmt Marker
Rule 41    compound_stmt -> funcdef Marker
Rule 42    compound_stmt -> function_call Marker
Rule 43    if_stmt -> IF test COLON MarkerIf suite
Rule 44    if_stmt -> IF test COLON MarkerIf suite ELSE COLON MarkerElse suite
Rule 45    while_stmt -> WHILE Marker test COLON MarkerWhile suite
Rule 46    Marker -> <empty>
Rule 47    MarkerWhile -> <empty>
Rule 48    MarkerIf -> <empty>
Rule 49    MarkerElse -> <empty>
Rule 50    for_stmt -> FOR atom IN test COLON MarkerFor suite
Rule 51    MarkerFor -> <empty>
Rule 52    suite -> simple_stmt
Rule 53    suite -> NEWLINE INDENT stmts DEDENT
Rule 54    test -> test_expr
Rule 55    test_expr -> or_test
Rule 56    or_test -> and_test
Rule 57    or_test -> and_test OR or_test
Rule 58    and_test -> not_test
Rule 59    and_test -> not_test AND and_test
Rule 60    not_test -> NOT not_test
Rule 61    not_test -> comparison
Rule 62    comparison -> expr
Rule 63    comparison -> expr comp_op expr
Rule 64    comp_op -> LESS
Rule 65    comp_op -> GREATER
Rule 66    comp_op -> EQEQUAL
Rule 67    comp_op -> GREATEREQUAL
Rule 68    comp_op -> LESSEQUAL
Rule 69    comp_op -> NOTEQUAL
Rule 70    expr -> xor_expr
Rule 71    expr -> xor_expr VBAR expr
Rule 72    xor_expr -> and_expr
Rule 73    xor_expr -> and_expr CIRCUMFLEX xor_expr
Rule 74    and_expr -> shift_expr
Rule 75    and_expr -> shift_expr AMPER and_expr
Rule 76    shift_expr -> arith_expr
Rule 77    shift_expr -> arith_expr LEFTSHIFT shift_expr
Rule 78    shift_expr -> arith_expr RIGHTSHIFT shift_expr
Rule 79    arith_expr -> term
Rule 80    arith_expr -> term PLUS arith_expr
Rule 81    arith_expr -> term MINUS arith_expr
Rule 82    term -> factor
Rule 83    term -> factor STAR term
Rule 84    term -> factor SLASH term
Rule 85    term -> factor PERCENT term
Rule 86    factor -> power
Rule 87    factor -> PLUS factor
Rule 88    factor -> MINUS factor
Rule 89    power -> atom
Rule 90    power -> atom LSQB test RSQB
Rule 91    atom -> NAME
Rule 92    atom -> NUMBER
Rule 93    atom -> STRING
Rule 94    atom -> TRIPLESTRING
Rule 95    atom -> FNUMBER
Rule 96    atom -> LSQB RSQB
Rule 97    atom -> LSQB listmaker RSQB
Rule 98    atom -> LPAREN RPAREN
Rule 99    atom -> LPAREN testlist_comp RPAREN
Rule 100   listmaker -> test
Rule 101   listmaker -> test COMMA listmaker
Rule 102   testlist_comp -> test
Rule 103   testlist_comp -> test COMMA testlist_comp
Rule 104   testlist -> test
Rule 105   testlist -> test COMMA testlist
Rule 106   stmts -> stmt stmts
Rule 107   stmts -> stmt Marker

Terminals, with rules where they appear

AMPER                : 75
AND                  : 59
AS                   : 
ASSERT               : 
AT                   : 
BACKQUOTE            : 
BINARYNUMBER         : 
BREAK                : 34
CIRCUMFLEX           : 73
CLASS                : 
COLON                : 5 43 44 44 45 50
COMMA                : 14 15 19 101 103 105
CONTINUE             : 35
DEDENT               : 53
DEF                  : 5
DEL                  : 
DOT                  : 
ELIF                 : 
ELSE                 : 44
ENDMARKER            : 1
EQEQUAL              : 66
EQUAL                : 13 15 27 28
EXCEPT               : 
EXEC                 : 
FINALLY              : 
FNUMBER              : 95
FOR                  : 50
FROM                 : 
GLOBAL               : 
GREATER              : 65
GREATEREQUAL         : 67
HEXADECIMALNUMBER    : 
IF                   : 43 44
IMPORT               : 
IN                   : 50
INDENT               : 53
INUMBER              : 
IS                   : 
LAMBDA               : 
LBRACE               : 
LEFTSHIFT            : 77
LESS                 : 64
LESSEQUAL            : 68
LPAREN               : 8 9 10 11 17 98 99
LSQB                 : 90 96 97
MINEQUAL             : 
MINUS                : 81 88
NAME                 : 5 10 11 16 91
NEWLINE              : 2 22 53
NOT                  : 60
NOTEQUAL             : 69
NUMBER               : 92
OCTALNUMBER          : 
OR                   : 57
PASS                 : 
PERCENT              : 85
PERCENTEQUAL         : 
PLUS                 : 80 87
PLUSEQUAL            : 
PRINT                : 29 30
RAISE                : 
RAWSTRING            : 
RBRACE               : 
RETURN               : 36 37
RIGHTSHIFT           : 78
RPAREN               : 8 9 10 11 17 98 99
RSQB                 : 90 96 97
SEMI                 : 
SLASH                : 84
SLASHEQUAL           : 
SLASHSLASH           : 
SLASHSLASHEQUAL      : 
STAR                 : 83
STAREQUAL            : 
STARSTAR             : 
STARSTAREQUAL        : 
STRING               : 93
TILDE                : 
TRIPLESTRING         : 94
TRY                  : 
UNICODESTRING        : 
VBAR                 : 71
WHILE                : 45
WITH                 : 
WS                   : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

Marker               : 24 25 26 31 32 33 38 39 40 41 42 45 107
MarkerArg            : 5
MarkerElse           : 44
MarkerFor            : 50
MarkerIf             : 43 44
MarkerScope          : 5
MarkerWhile          : 45
and_expr             : 72 73 75
and_test             : 56 57 59
arith_expr           : 76 77 78 80 81
atom                 : 50 89 90
break_stmt           : 31
comp_op              : 63
comparison           : 61
compound_stmt        : 21
continue_stmt        : 33
expr                 : 62 63 63 71
expr_stmt            : 25
factor               : 82 83 84 85 87 88
file_input           : 0
flow_stmt            : 24
for_stmt             : 39
fpdef                : 12 13 14 15 18 19
fplist               : 17 19
funcdef              : 41
function_call        : 28 42
if_stmt              : 38
listmaker            : 97 101
not_test             : 58 59 60
or_test              : 55 57
parameters           : 5
power                : 86
print_stmt           : 26
return_stmt          : 32
shift_expr           : 74 75 77 78
simple_stmt          : 20 52
single_stmt          : 1 2 4
small_stmt           : 23
small_stmts          : 22
stmt                 : 4 106 107
stmts                : 53 106
suite                : 5 43 44 44 45 50
term                 : 79 80 81 83 84 85
test                 : 13 15 27 27 28 37 43 44 45 50 90 100 101 102 103 104 105
test_expr            : 54
testlist             : 11 30 105
testlist_comp        : 99 103
varargslist          : 9 14 15
while_stmt           : 40
xor_expr             : 70 71 73

Parsing method: LALR

state 0

    (0) S' -> . file_input
    (1) file_input -> . single_stmt ENDMARKER
    (2) single_stmt -> . single_stmt NEWLINE
    (3) single_stmt -> .
    (4) single_stmt -> . single_stmt stmt

    ENDMARKER       reduce using rule 3 (single_stmt -> .)
    NEWLINE         reduce using rule 3 (single_stmt -> .)
    IF              reduce using rule 3 (single_stmt -> .)
    FOR             reduce using rule 3 (single_stmt -> .)
    WHILE           reduce using rule 3 (single_stmt -> .)
    DEF             reduce using rule 3 (single_stmt -> .)
    NAME            reduce using rule 3 (single_stmt -> .)
    PRINT           reduce using rule 3 (single_stmt -> .)
    BREAK           reduce using rule 3 (single_stmt -> .)
    RETURN          reduce using rule 3 (single_stmt -> .)
    CONTINUE        reduce using rule 3 (single_stmt -> .)
    NOT             reduce using rule 3 (single_stmt -> .)
    PLUS            reduce using rule 3 (single_stmt -> .)
    MINUS           reduce using rule 3 (single_stmt -> .)
    NUMBER          reduce using rule 3 (single_stmt -> .)
    STRING          reduce using rule 3 (single_stmt -> .)
    TRIPLESTRING    reduce using rule 3 (single_stmt -> .)
    FNUMBER         reduce using rule 3 (single_stmt -> .)
    LSQB            reduce using rule 3 (single_stmt -> .)
    LPAREN          reduce using rule 3 (single_stmt -> .)

    file_input                     shift and go to state 1
    single_stmt                    shift and go to state 2

state 1

    (0) S' -> file_input .



state 2

    (1) file_input -> single_stmt . ENDMARKER
    (2) single_stmt -> single_stmt . NEWLINE
    (4) single_stmt -> single_stmt . stmt
    (20) stmt -> . simple_stmt
    (21) stmt -> . compound_stmt
    (22) simple_stmt -> . small_stmts NEWLINE
    (38) compound_stmt -> . if_stmt Marker
    (39) compound_stmt -> . for_stmt Marker
    (40) compound_stmt -> . while_stmt Marker
    (41) compound_stmt -> . funcdef Marker
    (42) compound_stmt -> . function_call Marker
    (23) small_stmts -> . small_stmt
    (43) if_stmt -> . IF test COLON MarkerIf suite
    (44) if_stmt -> . IF test COLON MarkerIf suite ELSE COLON MarkerElse suite
    (50) for_stmt -> . FOR atom IN test COLON MarkerFor suite
    (45) while_stmt -> . WHILE Marker test COLON MarkerWhile suite
    (5) funcdef -> . DEF NAME MarkerScope parameters MarkerArg COLON suite
    (10) function_call -> . NAME LPAREN RPAREN
    (11) function_call -> . NAME LPAREN testlist RPAREN
    (24) small_stmt -> . flow_stmt Marker
    (25) small_stmt -> . expr_stmt Marker
    (26) small_stmt -> . print_stmt Marker
    (31) flow_stmt -> . break_stmt Marker
    (32) flow_stmt -> . return_stmt Marker
    (33) flow_stmt -> . continue_stmt Marker
    (27) expr_stmt -> . test EQUAL test
    (28) expr_stmt -> . test EQUAL function_call
    (29) print_stmt -> . PRINT
    (30) print_stmt -> . PRINT testlist
    (34) break_stmt -> . BREAK
    (36) return_stmt -> . RETURN
    (37) return_stmt -> . RETURN test
    (35) continue_stmt -> . CONTINUE
    (54) test -> . test_expr
    (55) test_expr -> . or_test
    (56) or_test -> . and_test
    (57) or_test -> . and_test OR or_test
    (58) and_test -> . not_test
    (59) and_test -> . not_test AND and_test
    (60) not_test -> . NOT not_test
    (61) not_test -> . comparison
    (62) comparison -> . expr
    (63) comparison -> . expr comp_op expr
    (70) expr -> . xor_expr
    (71) expr -> . xor_expr VBAR expr
    (72) xor_expr -> . and_expr
    (73) xor_expr -> . and_expr CIRCUMFLEX xor_expr
    (74) and_expr -> . shift_expr
    (75) and_expr -> . shift_expr AMPER and_expr
    (76) shift_expr -> . arith_expr
    (77) shift_expr -> . arith_expr LEFTSHIFT shift_expr
    (78) shift_expr -> . arith_expr RIGHTSHIFT shift_expr
    (79) arith_expr -> . term
    (80) arith_expr -> . term PLUS arith_expr
    (81) arith_expr -> . term MINUS arith_expr
    (82) term -> . factor
    (83) term -> . factor STAR term
    (84) term -> . factor SLASH term
    (85) term -> . factor PERCENT term
    (86) factor -> . power
    (87) factor -> . PLUS factor
    (88) factor -> . MINUS factor
    (89) power -> . atom
    (90) power -> . atom LSQB test RSQB
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    ENDMARKER       shift and go to state 3
    NEWLINE         shift and go to state 18
    IF              shift and go to state 41
    FOR             shift and go to state 29
    WHILE           shift and go to state 7
    DEF             shift and go to state 13
    NAME            shift and go to state 4
    PRINT           shift and go to state 10
    BREAK           shift and go to state 48
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 50
    NOT             shift and go to state 33
    PLUS            shift and go to state 20
    MINUS           shift and go to state 12
    NUMBER          shift and go to state 53
    STRING          shift and go to state 28
    TRIPLESTRING    shift and go to state 51
    FNUMBER         shift and go to state 31
    LSQB            shift and go to state 39
    LPAREN          shift and go to state 36

    small_stmt                     shift and go to state 5
    function_call                  shift and go to state 6
    return_stmt                    shift and go to state 8
    not_test                       shift and go to state 9
    flow_stmt                      shift and go to state 14
    xor_expr                       shift and go to state 15
    continue_stmt                  shift and go to state 17
    shift_expr                     shift and go to state 19
    print_stmt                     shift and go to state 21
    test                           shift and go to state 22
    compound_stmt                  shift and go to state 24
    and_expr                       shift and go to state 25
    break_stmt                     shift and go to state 26
    power                          shift and go to state 16
    simple_stmt                    shift and go to state 30
    factor                         shift and go to state 27
    stmt                           shift and go to state 32
    for_stmt                       shift and go to state 34
    and_test                       shift and go to state 35
    atom                           shift and go to state 37
    funcdef                        shift and go to state 38
    expr_stmt                      shift and go to state 40
    test_expr                      shift and go to state 23
    comparison                     shift and go to state 42
    term                           shift and go to state 43
    if_stmt                        shift and go to state 44
    arith_expr                     shift and go to state 45
    expr                           shift and go to state 46
    or_test                        shift and go to state 47
    while_stmt                     shift and go to state 49
    small_stmts                    shift and go to state 52

state 3

    (1) file_input -> single_stmt ENDMARKER .

    $end            reduce using rule 1 (file_input -> single_stmt ENDMARKER .)


state 4

    (10) function_call -> NAME . LPAREN RPAREN
    (11) function_call -> NAME . LPAREN testlist RPAREN
    (91) atom -> NAME .

    LPAREN          shift and go to state 54
    LSQB            reduce using rule 91 (atom -> NAME .)
    STAR            reduce using rule 91 (atom -> NAME .)
    SLASH           reduce using rule 91 (atom -> NAME .)
    PERCENT         reduce using rule 91 (atom -> NAME .)
    PLUS            reduce using rule 91 (atom -> NAME .)
    MINUS           reduce using rule 91 (atom -> NAME .)
    LEFTSHIFT       reduce using rule 91 (atom -> NAME .)
    RIGHTSHIFT      reduce using rule 91 (atom -> NAME .)
    AMPER           reduce using rule 91 (atom -> NAME .)
    CIRCUMFLEX      reduce using rule 91 (atom -> NAME .)
    VBAR            reduce using rule 91 (atom -> NAME .)
    LESS            reduce using rule 91 (atom -> NAME .)
    GREATER         reduce using rule 91 (atom -> NAME .)
    EQEQUAL         reduce using rule 91 (atom -> NAME .)
    GREATEREQUAL    reduce using rule 91 (atom -> NAME .)
    LESSEQUAL       reduce using rule 91 (atom -> NAME .)
    NOTEQUAL        reduce using rule 91 (atom -> NAME .)
    AND             reduce using rule 91 (atom -> NAME .)
    OR              reduce using rule 91 (atom -> NAME .)
    EQUAL           reduce using rule 91 (atom -> NAME .)
    NEWLINE         reduce using rule 91 (atom -> NAME .)


state 5

    (23) small_stmts -> small_stmt .

    NEWLINE         reduce using rule 23 (small_stmts -> small_stmt .)


state 6

    (42) compound_stmt -> function_call . Marker
    (46) Marker -> .

    ENDMARKER       reduce using rule 46 (Marker -> .)
    NEWLINE         reduce using rule 46 (Marker -> .)
    IF              reduce using rule 46 (Marker -> .)
    FOR             reduce using rule 46 (Marker -> .)
    WHILE           reduce using rule 46 (Marker -> .)
    DEF             reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    PRINT           reduce using rule 46 (Marker -> .)
    BREAK           reduce using rule 46 (Marker -> .)
    RETURN          reduce using rule 46 (Marker -> .)
    CONTINUE        reduce using rule 46 (Marker -> .)
    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)
    DEDENT          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 55

state 7

    (45) while_stmt -> WHILE . Marker test COLON MarkerWhile suite
    (46) Marker -> .

    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 56

state 8

    (32) flow_stmt -> return_stmt . Marker
    (46) Marker -> .

    NEWLINE         reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 57

state 9

    (58) and_test -> not_test .
    (59) and_test -> not_test . AND and_test

    OR              reduce using rule 58 (and_test -> not_test .)
    RSQB            reduce using rule 58 (and_test -> not_test .)
    EQUAL           reduce using rule 58 (and_test -> not_test .)
    COLON           reduce using rule 58 (and_test -> not_test .)
    COMMA           reduce using rule 58 (and_test -> not_test .)
    NEWLINE         reduce using rule 58 (and_test -> not_test .)
    RPAREN          reduce using rule 58 (and_test -> not_test .)
    AND             shift and go to state 58


state 10

    (29) print_stmt -> PRINT .
    (30) print_stmt -> PRINT . testlist
    (104) testlist -> . test
    (105) testlist -> . test COMMA testlist
    (54) test -> . test_expr
    (55) test_expr -> . or_test
    (56) or_test -> . and_test
    (57) or_test -> . and_test OR or_test
    (58) and_test -> . not_test
    (59) and_test -> . not_test AND and_test
    (60) not_test -> . NOT not_test
    (61) not_test -> . comparison
    (62) comparison -> . expr
    (63) comparison -> . expr comp_op expr
    (70) expr -> . xor_expr
    (71) expr -> . xor_expr VBAR expr
    (72) xor_expr -> . and_expr
    (73) xor_expr -> . and_expr CIRCUMFLEX xor_expr
    (74) and_expr -> . shift_expr
    (75) and_expr -> . shift_expr AMPER and_expr
    (76) shift_expr -> . arith_expr
    (77) shift_expr -> . arith_expr LEFTSHIFT shift_expr
    (78) shift_expr -> . arith_expr RIGHTSHIFT shift_expr
    (79) arith_expr -> . term
    (80) arith_expr -> . term PLUS arith_expr
    (81) arith_expr -> . term MINUS arith_expr
    (82) term -> . factor
    (83) term -> . factor STAR term
    (84) term -> . factor SLASH term
    (85) term -> . factor PERCENT term
    (86) factor -> . power
    (87) factor -> . PLUS factor
    (88) factor -> . MINUS factor
    (89) power -> . atom
    (90) power -> . atom LSQB test RSQB
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    NEWLINE         reduce using rule 29 (print_stmt -> PRINT .)
    NOT             shift and go to state 33
    PLUS            shift and go to state 20
    MINUS           shift and go to state 12
    NAME            shift and go to state 61
    NUMBER          shift and go to state 53
    STRING          shift and go to state 28
    TRIPLESTRING    shift and go to state 51
    FNUMBER         shift and go to state 31
    LSQB            shift and go to state 39
    LPAREN          shift and go to state 36

    comparison                     shift and go to state 42
    power                          shift and go to state 16
    arith_expr                     shift and go to state 45
    expr                           shift and go to state 46
    atom                           shift and go to state 37
    testlist                       shift and go to state 60
    or_test                        shift and go to state 47
    and_test                       shift and go to state 35
    shift_expr                     shift and go to state 19
    term                           shift and go to state 43
    not_test                       shift and go to state 9
    factor                         shift and go to state 27
    test                           shift and go to state 59
    xor_expr                       shift and go to state 15
    and_expr                       shift and go to state 25
    test_expr                      shift and go to state 23

state 11

    (36) return_stmt -> RETURN .
    (37) return_stmt -> RETURN . test
    (54) test -> . test_expr
    (55) test_expr -> . or_test
    (56) or_test -> . and_test
    (57) or_test -> . and_test OR or_test
    (58) and_test -> . not_test
    (59) and_test -> . not_test AND and_test
    (60) not_test -> . NOT not_test
    (61) not_test -> . comparison
    (62) comparison -> . expr
    (63) comparison -> . expr comp_op expr
    (70) expr -> . xor_expr
    (71) expr -> . xor_expr VBAR expr
    (72) xor_expr -> . and_expr
    (73) xor_expr -> . and_expr CIRCUMFLEX xor_expr
    (74) and_expr -> . shift_expr
    (75) and_expr -> . shift_expr AMPER and_expr
    (76) shift_expr -> . arith_expr
    (77) shift_expr -> . arith_expr LEFTSHIFT shift_expr
    (78) shift_expr -> . arith_expr RIGHTSHIFT shift_expr
    (79) arith_expr -> . term
    (80) arith_expr -> . term PLUS arith_expr
    (81) arith_expr -> . term MINUS arith_expr
    (82) term -> . factor
    (83) term -> . factor STAR term
    (84) term -> . factor SLASH term
    (85) term -> . factor PERCENT term
    (86) factor -> . power
    (87) factor -> . PLUS factor
    (88) factor -> . MINUS factor
    (89) power -> . atom
    (90) power -> . atom LSQB test RSQB
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    NEWLINE         reduce using rule 36 (return_stmt -> RETURN .)
    NOT             shift and go to state 33
    PLUS            shift and go to state 20
    MINUS           shift and go to state 12
    NAME            shift and go to state 61
    NUMBER          shift and go to state 53
    STRING          shift and go to state 28
    TRIPLESTRING    shift and go to state 51
    FNUMBER         shift and go to state 31
    LSQB            shift and go to state 39
    LPAREN          shift and go to state 36

    comparison                     shift and go to state 42
    power                          shift and go to state 16
    arith_expr                     shift and go to state 45
    expr                           shift and go to state 46
    atom                           shift and go to state 37
    shift_expr                     shift and go to state 19
    or_test                        shift and go to state 47
    and_test                       shift and go to state 35
    term                           shift and go to state 43
    not_test                       shift and go to state 9
    factor                         shift and go to state 27
    test                           shift and go to state 62
    xor_expr                       shift and go to state 15
    and_expr                       shift and go to state 25
    test_expr                      shift and go to state 23

state 12

    (88) factor -> MINUS . factor
    (86) factor -> . power
    (87) factor -> . PLUS factor
    (88) factor -> . MINUS factor
    (89) power -> . atom
    (90) power -> . atom LSQB test RSQB
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    PLUS            shift and go to state 20
    MINUS           shift and go to state 12
    NAME            shift and go to state 61
    NUMBER          shift and go to state 53
    STRING          shift and go to state 28
    TRIPLESTRING    shift and go to state 51
    FNUMBER         shift and go to state 31
    LSQB            shift and go to state 39
    LPAREN          shift and go to state 36

    factor                         shift and go to state 63
    power                          shift and go to state 16
    atom                           shift and go to state 37

state 13

    (5) funcdef -> DEF . NAME MarkerScope parameters MarkerArg COLON suite

    NAME            shift and go to state 64


state 14

    (24) small_stmt -> flow_stmt . Marker
    (46) Marker -> .

    NEWLINE         reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 65

state 15

    (70) expr -> xor_expr .
    (71) expr -> xor_expr . VBAR expr

    LESS            reduce using rule 70 (expr -> xor_expr .)
    GREATER         reduce using rule 70 (expr -> xor_expr .)
    EQEQUAL         reduce using rule 70 (expr -> xor_expr .)
    GREATEREQUAL    reduce using rule 70 (expr -> xor_expr .)
    LESSEQUAL       reduce using rule 70 (expr -> xor_expr .)
    NOTEQUAL        reduce using rule 70 (expr -> xor_expr .)
    AND             reduce using rule 70 (expr -> xor_expr .)
    OR              reduce using rule 70 (expr -> xor_expr .)
    NEWLINE         reduce using rule 70 (expr -> xor_expr .)
    RSQB            reduce using rule 70 (expr -> xor_expr .)
    EQUAL           reduce using rule 70 (expr -> xor_expr .)
    COMMA           reduce using rule 70 (expr -> xor_expr .)
    RPAREN          reduce using rule 70 (expr -> xor_expr .)
    COLON           reduce using rule 70 (expr -> xor_expr .)
    VBAR            shift and go to state 66


state 16

    (86) factor -> power .

    STAR            reduce using rule 86 (factor -> power .)
    SLASH           reduce using rule 86 (factor -> power .)
    PERCENT         reduce using rule 86 (factor -> power .)
    PLUS            reduce using rule 86 (factor -> power .)
    MINUS           reduce using rule 86 (factor -> power .)
    LEFTSHIFT       reduce using rule 86 (factor -> power .)
    RIGHTSHIFT      reduce using rule 86 (factor -> power .)
    AMPER           reduce using rule 86 (factor -> power .)
    CIRCUMFLEX      reduce using rule 86 (factor -> power .)
    VBAR            reduce using rule 86 (factor -> power .)
    LESS            reduce using rule 86 (factor -> power .)
    GREATER         reduce using rule 86 (factor -> power .)
    EQEQUAL         reduce using rule 86 (factor -> power .)
    GREATEREQUAL    reduce using rule 86 (factor -> power .)
    LESSEQUAL       reduce using rule 86 (factor -> power .)
    NOTEQUAL        reduce using rule 86 (factor -> power .)
    AND             reduce using rule 86 (factor -> power .)
    OR              reduce using rule 86 (factor -> power .)
    COMMA           reduce using rule 86 (factor -> power .)
    RPAREN          reduce using rule 86 (factor -> power .)
    EQUAL           reduce using rule 86 (factor -> power .)
    NEWLINE         reduce using rule 86 (factor -> power .)
    RSQB            reduce using rule 86 (factor -> power .)
    COLON           reduce using rule 86 (factor -> power .)


state 17

    (33) flow_stmt -> continue_stmt . Marker
    (46) Marker -> .

    NEWLINE         reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 67

state 18

    (2) single_stmt -> single_stmt NEWLINE .

    ENDMARKER       reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NEWLINE         reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    IF              reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    FOR             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    WHILE           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    DEF             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NAME            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PRINT           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    BREAK           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    RETURN          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    CONTINUE        reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NOT             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PLUS            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    MINUS           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NUMBER          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    STRING          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    TRIPLESTRING    reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    FNUMBER         reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LSQB            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LPAREN          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)


state 19

    (74) and_expr -> shift_expr .
    (75) and_expr -> shift_expr . AMPER and_expr
